--- a/packages/entando-pagetreeselector/sass/patternfly.scss
+++ b/packages/entando-pagetreeselector/sass/patternfly.scss
@@ -1,3 +1,3 @@
-@import "./node_modules/patternfly/dist/sass/patternfly/variables";
+@import "../../node_modules/patternfly/dist/sass/patternfly/variables";
 
 $color-row-selected: #def3ff;
