ENG-90 apply proper styling to label td

--- a/packages/entando-pagetreeselector/sass/PageTreeSelector.scss
+++ b/packages/entando-pagetreeselector/sass/PageTreeSelector.scss
@@ -6,6 +6,12 @@
     margin-left: 10px;
   }
 
+  &__select-area {
+    display: table-cell;
+    width: 100%;
+    outline: 0;
+  }
+
   .TreeNodeFolderIcon {
     color: $color-pf-light-blue-400;
   }
