--- a/packages/entando-pages/sass/index.scss
+++ b/packages/entando-pages/sass/index.scss
@@ -1,4 +1,3 @@
 @import "patternfly";
-@import "login/LoginForm";
-@import "login/LoginPage";
+@import "login/6.1/index.scss";
 @import "not-found/NotFoundPage"
