ENG-286 fix QA issues for css

--- a/packages/entando-pages/sass/login/index.scss
+++ b/packages/entando-pages/sass/login/index.scss
@@ -148,6 +148,7 @@ html, body {
   justify-self: flex-end;
   height: 50px;
   width: 171px;
+  border: 0;
   background-color: #00A0DF;
   color: #FFFFFF;
   font-family: "Roboto";
