ENG-643 403 page template modified same as 404 page template

--- a/packages/entando-pages/sass/not-found/NotFoundAccessPage.scss
+++ b/packages/entando-pages/sass/not-found/NotFoundAccessPage.scss
@@ -1,4 +1,4 @@
-.NotFoundPage {
+.NotFoundAccessPage {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -6,12 +6,12 @@
   text-align: center;
 }
 
-.NotFoundPage__page-title {
+.NotFoundAccessPage__page-title {
   font-size: 200px;
   font-weight: 600;
 }
 
-.NotFoundPage__page-abstract {
+.NotFoundAccessPage__page-abstract {
   font-size: 16px;
   font-weight: 300;
 }
