--- a/packages/entando-pages/sass/not-found/NotFoundAccessPage.scss
+++ b/packages/entando-pages/sass/not-found/NotFoundAccessPage.scss
@@ -1,4 +1,4 @@
-.NotFoundAccessPage {
+.ErrorPages {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -6,12 +6,12 @@
   text-align: center;
 }
 
-.NotFoundAccessPage__page-title {
+.ErrorPages__page-title {
   font-size: 200px;
   font-weight: 600;
 }
 
-.NotFoundAccessPage__page-abstract {
+.ErrorPages__page-abstract {
   font-size: 16px;
   font-weight: 300;
 }
