--- a/packages/entando-datatable/sass/index.scss
+++ b/packages/entando-datatable/sass/index.scss
@@ -1,5 +1,5 @@
 .table-datatable {
-  & > thead > th[dragOver] {
+  & > thead > th[dragover] {
     border-left: 5px solid red;
   }
   & > thead > tr > td,
